# open-ball-beam

./: .gitignore  LICENSE  TODO_requirements.in  pyproject.toml
ballbeam/common/: controller.py  interface.py  mspc.py  qt_utils.py  utils.py
ballbeam/configuration/: hardware_config.yaml  interface_config.yaml  sensor_calibration_config.yaml  servo_calibration_config.yaml
ballbeam/configuration/controller/lqg/: controller_params.pickle  design_data.pickle
ballbeam/configuration/controller/mpc/: design_data.pickle
ballbeam/configuration/controller/mpc/codegen/include/: workspace.h
ballbeam/configuration/controller/mpc/codegen/src/: setup.py
ballbeam/configuration/controller/mpc/codegen/src/osqp/: workspace.c
ballbeam/configuration/controller/mspc/: controller_params.npz
ballbeam/configuration/controller/pid/: controller_params.pickle
ballbeam/configurators/: configs.py  interface_configurator.py
ballbeam/notebooks/: README.md  aligned_data_analysis.ipynb  log_data_analysis.ipynb  log_viewer.py  periodic_alignment.ipynb  prediction.ipynb  predictive_control_vis.py  random_waves_alignment.ipynb
