[tool.poetry]
name = "open-ball-beam"
version = "0.0.0"
description = "Control science for everyone"
authors = ["Benjamin Gravell <bjgravell@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ballbeam" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "*"
pandas = "*"
pyarrow = "*"
matplotlib = "*"
plotly = "*"
pyqtgraph = "*"
scikit-learn = "*"
scipy = "*"
ipykernel = "*"
nbformat = "*"
pillow = ">=10.3.0"
pyserial = "^3.5"
keyboard = "^0.13.5"
osqp = "^1.0.5"
cmake = "^4.1.2"  # required for osqp codegen
ruamel-yaml = "<0.18.0"
pygit2 = "^1.19.0"
tornado = ">=6.4.2"  # must be >=6.4.2 to avoid https://nvd.nist.gov/vuln/detail/CVE-2024-52804
pyside6 = "^6.10.0"
rerun-sdk = "^0.26.2"
streamlit = "^1.51.0"
cmap = "^0.6.2"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.14.3"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, we don't want those.
    | blib2to3
    | tests/data
)/
'''
# preview is needed for long line string wrapping
preview = true

[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120
